# mjhub

./: .gitignore  README.md  pyproject.toml
src/mjhub/: __init__.py  refs.py  scene.py  types.py
tests/: test_refs.py
