[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mjhub"
version = "0.1.0"
description = "Shared MJCF reference resolution and scene-loading utilities for MuJoCo projects."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "huggingface_hub>=0.30",
    "mujoco>=2.3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
